--- a/CCC_CarCostCalculatorWPF/CCC_CarCostCalculatorWPF.csproj
+++ b/CCC_CarCostCalculatorWPF/CCC_CarCostCalculatorWPF.csproj
@@ -54,6 +54,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CarLister.cs" />
+    <Compile Include="ClearFunction.cs" />
+    <Compile Include="TryParseMethod.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -62,6 +65,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CarArray.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
