--- a/CCC_CarCostCalculatorWPF/CCC_CarCostCalculatorWPF.csproj
+++ b/CCC_CarCostCalculatorWPF/CCC_CarCostCalculatorWPF.csproj
@@ -65,7 +65,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CarArray.cs" />
+    <Compile Include="CarConstructor.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
